%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: smallWheels
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Moving
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110763054}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110168676
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200708}
  m_DstState: {fileID: 110263054}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110183894
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110263054}
  m_DstState: {fileID: 110200708}
  m_TransitionDuration: .5
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .5
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &110200708
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: New State
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110763054}
  m_Position: {x: 99, y: 43, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110263054
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: frontWheel
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 480681ada88612f4aa01535d7c1ab45a, type: 2}
  m_ParentStateMachine: {fileID: 110763054}
  m_Position: {x: 96, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110763054
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200708}
  m_States:
  - {fileID: 110263054}
  - {fileID: 110200708}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110200708}
      second:
      - {fileID: 110168676}
    data:
      first: {fileID: 110263054}
      second:
      - {fileID: 110183894}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -276, y: -12, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
